# Arc

./: .env.example  .gitignore  CHANGES.md  LICENSE  README.md  SETUP.md  SETUP_COMPLETE.md  SKILLS_CONFIG.md  START.cmd  STARTUP.md  agents.md  start-separate.sh  start.sh  start_arc.ps1  start_arc_simple.bat
backend/: init_cloud_skills.py  pyproject.toml  test_neon.py
backend/src/: agent.py  agent_cloud.py  agent_gcp.py  agent_neon.py  main.py  middleware.py  prompt.py  remove_azure_skills.py  routes.py  serialization.py  skills_manager.py
backend/src/backends/: r2_backend.py
backend/src/subagents/: coder.py  doc_extraction.py  researcher.py  uiux.py
backend/src/tools/: __init__.py  reflection.py  search.py  vm_health.py
backend/workspace/memories/: AGENTS.md
backend/workspace/skills/langgraph-patterns/: SKILL.md
frontend/: next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: AgentChat.tsx  AgentMessage.tsx  ArcMarkdown.tsx  CommandConduit.tsx  DecayStream.tsx  DeepFocusOverlay.tsx  MarkdownContent.tsx  OrbScene.tsx  OrbTopBar.tsx  PlanConstellation.tsx  StatusBar.tsx  TelemetryPanel.tsx  TodoPanel.tsx  ToolCallCard.tsx  ToolCallLog.tsx  ToolFilament.tsx  types.ts
workspace/memories/: AGENTS.md
workspace/skills/langgraph-patterns/: SKILL.md
